syntax = "proto3";



service ClientService {
  rpc Read (ReadRequest) returns (ReadReply);
}

message ReadRequest {
  int32 partitionID = 1;
  int32 ObjectID = 2;
}
message ReadReply {
  string value = 1;
  
}
