syntax = "proto3";

option csharp_namespace = "GStoreServer";


service AttachServerService {
  rpc Attach (AttachRequest) returns (AttachReply);
  rpc Read (ReadRequest) returns (ReadReply);
  rpc Write (WriteRequest) returns (WriteReply);
}

message AttachRequest {
bool ok =1;
}
message AttachReply {
  bool ok = 1;
}

message ReadRequest {
  int32 partitionID = 1;
  int32 ObjectID = 2;
  string clientUrl =3;
}
message ReadReply {
  bool hasValue = 1;  
  string value=2;   
}

message WriteRequest {
  int32 partitionID = 1;
  int32 ObjectID = 2;
  string value = 3;
}
message WriteReply {
  bool ack=1;
}

