syntax = "proto3";

option csharp_namespace = "PuppetMaster";


service NodeServerService {
  rpc Acknoledge (SCheckUp) returns (SAck);

}

message SCheckUp{
 bool check=1;
}
message SAck{
 bool ack=1;
}